feat: Some more features
